# kuv

./: LICENSE  README.md  pyproject.toml
.github/workflows/: uv-publish.yml
kernels/kuv/: kernel.json
kernels/uvkernel/: kernel.json
src/kuv/: ipynb_metadata.py  kernel_launcher.py
src/uvkernel/: ipynb_metadata.py  launcher.py
