[project]
name = "kuv"
version = "0.1.0"
description = "A jupyter kernel with automatic PEP723 environments, using uv"
readme = "README.md"
authors = [
    { name = "Tobin Jones", email = "tobinjones@me.com" }
]
requires-python = ">=3.13"
dependencies = [
    "nbformat>=5.10.4",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.scripts]
kuv-kernel-launcher = "kuv.kernel_launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.shared-data]
"kernels/kuv" = "share/jupyter/kernels/kuv"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
