[project]
name = "kuv"
version = "0.1.5"
description = "A jupyter kernel with automatic PEP723 environments, using uv"
readme = "README.md"
authors = [
    { name = "Tobin Jones", email = "tobin@davisjones.nz" }
]
requires-python = ">=3.11"
dependencies = [
    "nbformat>=5.10.4",
    "uv>=0.7.19",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.shared-data]
"kernels/kuv" = "share/jupyter/kernels/kuv"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
